[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/TeamSelect/team_select.gd" type="Script" id=1]

[node name="TeamSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonRed" type="Button" parent="."]
margin_left = 224.0
margin_top = 256.0
margin_right = 480.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 48, -24 )
text = "Team Red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBlue" type="Button" parent="."]
margin_left = 544.0
margin_top = 256.0
margin_right = 800.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 48, -24 )
text = "Team Blue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonRed" to="." method="_on_ButtonRed_pressed"]
[connection signal="pressed" from="ButtonBlue" to="." method="_on_ButtonBlue_pressed"]
